# personal_tests

./: README.md
check_grade/: .gitignore  CMakeLists.txt  main.cpp
vectorized_copy/: CMakeLists.txt  conanfile.txt  main.cpp
vectorized_copy/src/: VectorCpy.h  benchmark.cpp  main.cpp
